# voxl-streamer

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  clean.sh  deploy_to_voxl.sh  get_dependencies.sh  install-dependencies.sh  install_build_deps.sh  install_on_voxl.sh  make_package.sh
bash_completions/: voxl-configure-streamer  voxl-streamer
config/: voxl-configure-streamer.c  voxl-streamer.conf
include/: camera_metadata.h  configuration.h  context.h  input.h  pipeline.h
ipk/control/: control  postinst
pkg/: .gitignore
pkg/control/: control  postinst
script/: start-uvc-stream.sh
scripts/: voxl-configure-streamer
service/: voxl-streamer-32.service  voxl-streamer-64.service
services/: voxl-streamer.service
src/: configuration.c  input.c  main.c  pipeline.c  util.c
